--- a/contact.html
+++ b/contact.html
@@ -81,16 +81,16 @@
         <div class="mt-6">
             <h4 class="font-semibold mb-2">Follow Me</h4>
             <div class="flex space-x-4">
-              <a href="#" class="text-white hover:text-yellow-400">
+              <a href="https://github.com/Fiiboy7" class="text-white hover:text-yellow-400">
                 <img src="https://img.icons8.com/ios-filled/50/ffffff/github.png" alt="GitHub" class="w-8 h-8">
               </a>
-              <a href="#" class="text-white hover:text-yellow-400">
+              <a href="https://www.facebook.com/share/1AQCwfhXLo/" class="text-white hover:text-yellow-400">
                 <img src="https://img.icons8.com/ios-filled/50/ffffff/facebook-new.png" alt="Facebook" class="w-8 h-8">
               </a>
-              <a href="#" class="text-white hover:text-yellow-400">
+              <a href="https://www.instagram.com/jenaisssante__?igsh=amgzZTJsOGJxZHVw" class="text-white hover:text-yellow-400">
                 <img src="https://img.icons8.com/ios-filled/50/ffffff/instagram-new.png" alt="Instagram" class="w-8 h-8">
               </a>
-              <a href="#" class="text-white hover:text-yellow-400">
+              <a href="https://www.linkedin.com/in/rofik-ramadhani-769758327?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="text-white hover:text-yellow-400">
                 <img src="https://img.icons8.com/ios-filled/50/ffffff/linkedin.png" alt="LinkedIn" class="w-8 h-8">
               </a>
             </div>
